Resolve "listings can be too wide"

--- a/css/latte.css
+++ b/css/latte.css
@@ -625,6 +625,8 @@ input[type='submit'] {
 }
 
 .table-cell-subtitle {
+  max-width: 250px;
+  word-break: break-word;
   margin: 0;
   font-size: 12px;
 }
